# mcp_tools_test

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  run_mcp.py  test.py
.github/instructions/: copilot-instructions.instructions.md
app/: __init__.py  server.py
app/tools/: __init__.py  clickhouse.py  decorators.py  groups.py  interfaces.py  protocols.py  registry.py  schemas.py  tool_selector.py
app/tools/analytics/: __init__.py  base.py  factory.py  pandas_tool.py
app/tools/analytics/descriptions/: analyse_data.md
app/tools/factories/: __init__.py  base.py
app/tools/mcp_clients/: __init__.py  base.py  client.py  example.py
app/tools/sql/: __init__.py  base.py  config.py  factory.py
app/tools/sql/descriptions/: get_aggregate_campaign_metrics.md  get_campaign_metrics.md  get_recent_campaigns.md  lookup_campaigns.md
app/tools/sql/queries/: get_aggregate_campaign_metrics.sql  get_campaign_metrics.sql  get_recent_campaigns.sql  lookup_campaigns.sql
