[project]
name = "mcp-tools-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "clickhouse-sqlalchemy>=0.3.2",
    "dotenv>=0.9.9",
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "langchain-aws>=0.2.33",
    "langchain-community>=0.3.29",
    "langchain-experimental>=0.3.4",
    "langchain-mcp-adapters>=0.1.10",
    "mcp[cli]>=1.14.1",
    "pandas>=2.3.2",
    "pre-commit>=4.3.0",
]
